# uZumaKi

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  Readme.md  Roadmap.md  reportformat.md  uZumaKi.pptx
benchmarks/: Readme.md
benchmarks/miden/fibonacci/: bench.json  (+1 more)
miden_stark/: Cargo.toml
miden_stark/shared/: Cargo.toml
miden_stark/src/: fib.rs  lib.rs  merkle.rs
risc_zero_stark/host/: Cargo.toml
risc_zero_stark/risc_zero_fib/: README.md
risc_zero_stark/risc_zero_merkle/: .gitignore  Cargo.toml
risc_zero_stark/risc_zero_merkle/host/: Cargo.toml
risc_zero_stark/risc_zero_merkle/host/src/: bench.rs  lib.rs  merkle.rs
scripts/: miden_merkle_membership_proof.py  miden_merkle_membership_verify.py  miden_prover_fibonacci.py  miden_sha256_proof.py  miden_sha256_verify.py  miden_verify_fibancci.py  risczero_fibonacci.py  risczero_prover_fibonacci.py  risczero_sha256_prover.py  risczero_sha256_verifier.py  risczero_verifier_fibonacci.py  stone_fibonacci_prove_verify.py  stone_fibonacci_prover.py  stone_fibonacci_verifier.py  stone_sha256_prover.py  stone_sha256_verifier.py
shared/src/: hash.rs  lib.rs
src/: fib.rs
src/benches/: bench.rs
stone_stark/: .gitignore  Cargo.toml  Readme.md  test.json
stone_stark/benchmarks/: custom_fibonacci.cairo  custom_fibonacci_compiled.json  custom_fibonacci_private_input.json  fibonacci.json  fibonacci_compiled.json  fibonacci_private_input.json  fibonacci_proof.json
stone_stark/scripts/: build-stone.sh  install-stone.sh
stone_stark/src/: bench.rs  error.rs  lib.rs  prover.rs  prover.rs.bkp  utils.rs
(+155 files in other folders)
