[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.2"
risc0-zkp = "0.20.1"
risc0-zkvm = "0.20.1"
serde = "1.0"
merkle-tree = { path = "../core" }
methods = { path = "../methods" }
benchy = "0.1.1"

[[bench]]
harness = false
name = "bench"
path = "./src/bench.rs"